--- a/src/app/features/category/category-list/category-list.component.html
+++ b/src/app/features/category/category-list/category-list.component.html
@@ -6,4 +6,26 @@
 <a [routerLink]="['/admin/category/add']" routerLinkActive="router-link-active"  class="btn btn-primary">Add Category</a>
 
 </div>
+
+<!-- if category has a value, then -->
+<ng-container *ngIf="categories">  
+
+<table class="table table-bordered mt-3">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Url Handle</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let item of categories">
+
+            <td>{{item.Id}}</td>
+            <td>{{item.Name}}</td>
+            <td>{{item.UrlHandle}}</td>
+        </tr>
+    </tbody>
+</table>
+</ng-container>
 </div>
