created category and add blog/ book post and implememnted markdown, not done, just resolved a crazy bug

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -18,9 +18,9 @@
               <li><a class="dropdown-item" [routerLink]="['/admin/category']" routerLinkActive="router-link-active" >Category</a></li>
              
              
-              <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+              <li><hr class="dropdown-divider"></li> 
+              <li><a class="dropdown-item" [routerLink]="['/admin/blogposts']" routerLinkActive="router-link-active" >BlogPosts</a></li>
+             
             </ul>
           </li>
          
