--- a/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -32,36 +32,45 @@
 
 
         <div class="mb-3">
-            <label for="BookContent" class="form-label">Content</label>
+            <label for="Content" class="form-label">Content</label>
 
-            <div class="d-flex">
+            <div class="d-flex flex-row">
                 <div class="col-6 p-2">
-                    <textarea type="text" 
+                    <textarea 
+                    id="Content"
+                    name="Content"
                     class="form-control" 
-                    id="BookContent"
-                    aria-describedby="BookContent" 
-                    name="BookContent"
                     style="height: 350px; max-height: 350px;"
                     [(ngModel)]="model.content" >
                     </textarea>
                 </div>
 
 
-                <!-- <div class="col-6 p-2" style="height: 350px; overflow-y: scroll;">
-                
-                    <markdown [data]="model.content"></markdown>
-                </div> -->
+               
             </div>
 
             
-            <small id="BookContent" class="form-text text-muted">Content should not exceed 500 words.</small>
+            <small id="Content" class="form-text text-muted">Content should not exceed 500 words.</small>
         </div>
 
 
-        <div class="mb-3">
-            <label for="FeaturedImageUrl" class="form-label">Featured ImageUrl</label>
-            <input type="text" class="form-control" id="FeaturedImageUrl" aria-describedby="FeaturedImageUrl"  name="FeaturedImageUrl" [(ngModel)]="model.featuredUrl">
-            <small id="FeaturedImageUrl" class="form-text text-muted">Enter Featured ImageUrl.</small>
+        <div class="mt-3">
+            <label for="featuredUrl" class="form-label">Featured ImageUrl</label>
+           
+            <ng-container *ngIf="model.featuredUrl !== ''">
+                <div>
+                    <img [src] = "model.featuredUrl" height="100" class="my-2">
+                </div>
+            </ng-container>
+
+            
+            <input type="text"
+            class="form-control"
+            id="featuredUrl" 
+           
+            name="featuredUrl" 
+            [(ngModel)]="model.featuredUrl">
+            <small id="featuredUrl" class="form-text text-muted">Enter Featured ImageUrl.</small>
         </div>
 
         
@@ -77,9 +86,19 @@
             <label class="form-check-label" for="isVisibleYes">
               Is Visible?
             </label>
-          </div>
+        </div>
+
+        <div class="mt-3">
+            <label for="rCategory" class="form-label">Category </label>
+            <ng-container *ngIf="categories$ | async as rCategory">
+                <select name="rCategory" [(ngModel)]="model.rCategory" id="rCategory" class="form-control" multiple>
+                    <option *ngFor="let item of rCategory" [value]="item.id">{{item.name}}</option>
+                </select>
+            </ng-container>
+        </div>
+        
 
 
-        <button type="submit" class="btn btn-primary mt-4 px-4">Save</button>
+             <button type="submit" class="btn btn-primary mt-4 px-4">Save</button>
     </form>
 </div>
