--- a/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -19,6 +19,10 @@
                 <th>ShortDescription</th>
                 <th>IsVisible</th>
                 <th></th>
+                <th>Category</th>
+               
+               
+               
                
             </tr>   
         </thead>
@@ -28,8 +32,14 @@
                 <td>{{item.title}}</td>
                 <td>{{item.shortDescription}}</td>
                 <td>{{item.isVisible}}</td>
-                <td><a  [routerLink]="['/admin/blogposts', item.id]" routerLinkActive="router-link-active" class="btn btn-primary px-5">Edit</a></td>
-               
+                <td><a class="btn btn-primary px-5" [routerLink]="['/admin/blogposts', item.id]" routerLinkActive="router-link-active">Edit</a></td>
+                <td>
+                    <span *ngFor="let item of item.categories">
+                        <span class="badge bg-secondary">{{item.name}}</span>
+                    </span>
+                    
+                </td>
+              
             </tr>
         </tbody>
     </table>
